--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
@@ -17,34 +18,84 @@ body{
     background-color: #F2E8CF;
 }
 .main{
-    width: 750px;
-    min-height: 450px;
+    width: 850px;
+    min-height: 520px;
     border-radius: 15px;
     background-color: #162719;
     color: #F2E8CF;
-    padding-inline: 3%;
-    padding-block: 2%;
+    padding-inline: 2%;
+    padding-block: 1.5%;
+    box-shadow: 0px 0px 3px rgb(196, 194, 194);
 }
 h1{
-    margin-bottom: 25px;
-    font-weight: 1000;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 20px;
+    font-weight: 500;
     letter-spacing: 1px;
-   font-size: 38px;
+   font-size: 35px;
 }
-input{
+
+/* Input css */
+
+.input-container {
+    position: relative;
+    width: 100%;
+    font-size: 16px;
+}
+
+input {
+    width: 100%;
+    padding: 12px;
+    border: 1.2px dotted #ccc;
+    border-radius: 10px;
+    outline: none;
+    font-size: 16px;
+    transition: border-color 0.3s ease-in-out;
     background-color: transparent;
     color: white;
-    border: 1px solid #F2E8CF;
-    background-color: transparent;
-    width: 90%;
-    height: 45px;
-    border-radius: 10px;
-    padding-left: 10px;
-    font-weight: 400;
 }
-.se{
-    width: 50px;
+
+label {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: white;
+    padding: 0 5px;
+    color: gray;
+    font-size: 17px;
+    transition: all 0.3s ease-in-out;
+    pointer-events: none;
+    background-color: #162719;
+}
+
+input:focus,
+input:not(:placeholder-shown) {
+    border-color: #facd5c;
+}
+
+input:focus + label,
+input:not(:placeholder-shown) + label {
+    top: 0;
+    font-size: 12px;
+    color: #f7d889;
+}
+
+/* input{
+    background-color: transparent;
+    color: white;
+    border: none;
+    box-shadow: 1px 1px 3px #f0cb6d,-1px -1px 3px #f0cb6d;
+    background-color: transparent;
+    width: 100%;
     height: 50px;
+    border-radius: 50px;
+    padding-left: 20px;
+    font-weight: 400;
+} */
+.se{
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     border: none;
    background-color: transparent;
@@ -52,7 +103,7 @@ input{
     font-weight: 600;
 }
 .se i{
-    font-size: 20px;
+    font-size: 18px;
 }
 .se:active{
     background-color: #F2E8CF;
@@ -63,41 +114,52 @@ ul{
 }
 li{
     position: relative;
-    line-height: 40px;
-   border-bottom: 1px solid #F2E8CF;
-    padding-inline: 10px;
+    height: 73px;
     margin-top: 20px;
+    padding-inline: 20px;
     color: white;
+    /* border: 1px solid #F2E8CF; */
+    border: none;
+    border-radius: 20px;
+    padding-top: 25px;
+    box-shadow: 1px 1px 2px #f3db9d;
+    font-size: 20px;
 }
 #dealall{
-    height: 30px;
-    border-radius: 5px;
+    height: 40px;
+    border-radius: 10px;
     background-color: #F2E8CF;
     font-weight: 500;
-    width: 100px;
-    margin-top: 15px;
-    border: 1px solid white;
+    width: 130px;
+    margin-top: 17px;
+    border: none;
+    font-size: 14px;
     color: black;
-    margin-right: 10px;
+    margin-left: 10px;
     display: none;
+    &:hover{
+        background-color: transparent;
+        border: 1px solid #F2E8CF;
+        color: white;
+    }
 }
 .fa-solid.fa-pencil{
-    top: 10px;
+    top: 26px;
     position: absolute;
-    right: 43px;
-    font-size: 17px;
+    right: 52px;
+    font-size: 20px;
 }
 .fa-solid.fa-xmark{
     position: absolute;
-    right: 10px;
-    top: 9px;
-    font-size: 22px;
+    right: 20px;
+    top: 23px;
+    font-size: 27px;
 }
 .fa-solid.fa-check{
     position: absolute;
-    right: 75px;
-    top: 6.1px;
-    font-size: 22px;
+    right: 85px;
+    top: 23.1px;
+    font-size: 27px;
 }
 .fa-solid-fa-check:active,.fa-solid.fa-xmark:active ,.fa-solid.fa-pencil:active{
     transition: 0.5px ease-in;
@@ -134,6 +196,7 @@ i{
     justify-content: space-evenly;
 }
 
+
 @media(max-width:550px){
     .main{
         width: 100%;
@@ -162,4 +225,6 @@ i{
         background-color: white;
         display: block;
     }
-}
+} 
+
+
